src/objects/pjmng__c.object
<CustomObject>
    <fields>
        <fullName>chart__c</fullName>
        <formula>HYPERLINK(&quot;https://na7.salesforce.com/apex/GantChartTest?selectId=&quot;&amp; Id, &quot;チャート&quot;, &quot;_self&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ガントチャート</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>devleader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>開発リーダー</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>usermng__c.valid__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>usermng__c</referenceTo>
        <relationshipLabel>プロジェクト管理</relationshipLabel>
        <relationshipName>pjmng7PSx</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>enddate__c</fullName>
        <label>終了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>kadai_cnt__c</fullName>
        <label>課題数</label>
        <summaryFilterItems>
            <field>kadaimng__c.status__c</field>
            <operation>notContain</operation>
            <value>対応なし</value>
        </summaryFilterItems>
        <summaryForeignKey>kadaimng__c.pjname__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>mikaiketsu_cnt__c</fullName>
        <label>未解決課題数</label>
        <summaryFilterItems>
            <field>kadaimng__c.status__c</field>
            <operation>contains</operation>
            <value>未対応, 対応中, 保留</value>
        </summaryFilterItems>
        <summaryForeignKey>kadaimng__c.pjname__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>pjleader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>プロジェクトリーダー</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>usermng__c.valid__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>usermng__c</referenceTo>
        <relationshipLabel>プロジェクト管理 (プロジェクト責任者)</relationshipLabel>
        <relationshipName>pjmng7Qtd</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>shubetsu__c</fullName>
        <label>プロジェクト種別</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>移行</fullName>
                </value>
                <value>
                    <fullName>基盤</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>startdate__c</fullName>
        <label>開始日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>ステータス</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>計画中</fullName>
                </value>
                <value>
                    <fullName>開始済み</fullName>
                </value>
                <value>
                    <fullName>終了</fullName>
                </value>
                <value>
                    <fullName>中止</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>summary__c</fullName>
        <label>システム概要</label>
        <type>TextArea</type>
    </fields>
    <label>プロジェクト管理</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <listViews>
        <fullName>GroupMail_pjmng</fullName>
        <filterScope>Queue</filterScope>
        <label>メールテスト</label>
        <queue>GroupMail</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>プロジェクト名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>